# fade

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FADE v0.3+ Roadmap.md  FADE v1.0 Release + Future Roadmap.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: canary.yml  ci.yml  nightly.yml
benchmarks/: dgx_results_Llama-3.1-8B-Instruct.md  dgx_results_Mistral-7B-Instruct-v0.3.md  dgx_results_Qwen2.5-0.5B-Instruct.md  dgx_results_Qwen2.5-7B-Instruct.md  divergence.py  full_suite.py  longbench_eval.py  pareto.py  production_suite.py  results.json  tps.py
examples/: quickstart.ipynb  quickstart.py
experiments/: run_baseline.py  run_tiered.py
fade/: __init__.py  _compat.py  backends.py  cache.py  codebook.py  config.py  learned_policy.py  patch.py  policy.py  quant.py  rope.py  rotated_quant.py  server.py  telemetry.py  tracker.py
fade/eval/: __init__.py  memory.py  needle.py  perplexity.py  quality.py  wikitext_ppl.py
fade/kernels/: __init__.py  fused_int4_attn.py  int4_attention.py
fade/serving/: README.md  __init__.py  vllm_adapter.py
scripts/: train_codebook.py  train_eviction_mlp.py
tests/: test_7b_integration.py  test_attn_impl.py  test_backends.py  test_cache.py  test_cache_batched.py  test_checkpoint.py  test_codebook.py  test_compat.py  test_config.py  test_eval_gate.py  test_fused_blackwell.py  test_generate.py  test_hybrid.py  test_integration.py  test_models.py  test_perf.py  test_quant.py  test_ragged.py  test_rope.py  test_server.py  test_telemetry.py  test_w10.py
